# cale

./: .gitignore  README.md  google.py  main.py  pyproject.toml
.github/workflows/: test.yml
src/: groceries.py  kalendar.py  main.py  people.py  profile.py  tasks.py
