[project]
name = "Kal-E"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "El Campus", email = "ecampus2026@gmail.com" }
]
dependencies = [
    "flet>=0.86.1"
]

[dependency-groups]
dev = [
    "flet-cli>=0.86.1",
    "flet-desktop>=0.86.1",
    "flet-web>=0.86.1",
    # Integration testing with `flet test` / pytest. The `test` extra brings in
    # pytest, pytest-asyncio and the screenshot-comparison dependencies.
    "flet[test]>=0.86.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flet]
desktop_flavor = "light"    # Change to "full" to use flet-audio and flet-video
org = "com.mycompany"
product = "Kal-E"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
